--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 MinecraftSkinCreator v1.0
 
-Made to easily make skins from Delmarks suit packs
+Made to easily make skins from Delmarks suit packs, but can easily be used with other textures as long as they support transparency.
 
+
+===============
 Usage:
 Before running program, download and extract Delmarks pack from:
 http://www.minecraftforum.net/topic/150154-release-a-comprehensive-collection-of-fine-suits-20/
@@ -19,3 +21,35 @@ You can modify the layer name by editing the text box at the top of the window, 
 Continue adding layers until you are happy with the result, and click "Export current image as PNG" to save your skin. This button will save the image you can currently see on the bottom-left, but at the correct size for a skin.
 
 Clicking "Save layers" allows you to export the layers you have chosen to edit them at a later date.
+
+
+
+===============
+Known Bugs:
+Loaded layers after loading from file do not display in the tree, yet apply to the image correctly.
+
+
+
+===============
+About:
+Software written by Matt Fisher. 
+Copyright (C) Matt Fisher 2011
+Use of tree code credited below.
+
+This software is provided as-is. I am not responsible nor liable for any data loss, hardware damage, disaster nor any other damages from use of this code. Use of this software is at your own risk.
+
+Feel free to use, modify and distribute the source code and programs containing parts of the source code, as long as I am credited where necessary.
+
+
+
+The section of copyright below is for the use of a code fragment for the file tree. It is placed here and in the source file where it is used to avoid any potential legal problems.
+=====
+Copyright (c) Ian F. Darwin, http://www.darwinsys.com/, 1996-2002. All rights reserved. Software written by Ian F. Darwin and others. $Id: LICENSE,v 1.8 2004/02/09 03:33:38 ian Exp $
+
+Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met: 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer. 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
+
+THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+Java, the Duke mascot, and all variants of Sun's Java "steaming coffee cup" logo are trademarks of Sun Microsystems. Sun's, and James Gosling's, pioneering role in inventing and promulgating (and standardizing) the Java language and environment is gratefully acknowledged.
+
+The pioneering role of Dennis Ritchie and Bjarne Stroustrup, of AT&T, for inventing predecessor languages C and C++ is also gratefully acknowledged.
