--- a/README
+++ b/README
@@ -26,7 +26,25 @@ Clicking "Save layers" allows you to export the layers you have chosen to edit t
 
 ===============
 Known Bugs:
-Loaded layers after loading from file do not display in the tree, yet apply to the image correctly.
+None at the moment.
+
+
+
+===============
+Version History:
+
+V 1.1.0 (13/09/2011)
+		- Completely new tree code
+		- Fixed layer loading bug
+		- New layer file format
+		- Only PNGs and folders are displayed
+		- Empty folders are no longer shown
+		- JavaDoc comments
+		
+V 1.0.2 - Fixed for loops ending too soon bug
+V 1.0.1 - Fixed transparency bug
+V 1.0.0 (10/09/2011) 
+		- Initial
 
 
 
@@ -34,22 +52,8 @@ Loaded layers after loading from file do not display in the tree, yet apply to t
 About:
 Software written by Matt Fisher. 
 Copyright (C) Matt Fisher 2011
-Use of tree code credited below.
 
 This software is provided as-is. I am not responsible nor liable for any data loss, hardware damage, disaster nor any other damages from use of this code. Use of this software is at your own risk.
 
 Feel free to use, modify and distribute the source code and programs containing parts of the source code, as long as I am credited where necessary.
 
-
-
-The section of copyright below is for the use of a code fragment for the file tree. It is placed here and in the source file where it is used to avoid any potential legal problems.
-=====
-Copyright (c) Ian F. Darwin, http://www.darwinsys.com/, 1996-2002. All rights reserved. Software written by Ian F. Darwin and others. $Id: LICENSE,v 1.8 2004/02/09 03:33:38 ian Exp $
-
-Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met: 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer. 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
-
-THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-
-Java, the Duke mascot, and all variants of Sun's Java "steaming coffee cup" logo are trademarks of Sun Microsystems. Sun's, and James Gosling's, pioneering role in inventing and promulgating (and standardizing) the Java language and environment is gratefully acknowledged.
-
-The pioneering role of Dennis Ritchie and Bjarne Stroustrup, of AT&T, for inventing predecessor languages C and C++ is also gratefully acknowledged.
